Style: Refine and modernize approach to avoid container overflows

--- a/pep_sphinx_extensions/pep_theme/static/mq.css
+++ b/pep_sphinx_extensions/pep_theme/static/mq.css
@@ -7,10 +7,10 @@
     section#pep-page-section {
         padding: 0.25rem;
     }
-    code,
     dl.footnote > dt,
     dl.footnote > dd {
-        word-break: break-all;
+        padding-left: 0;
+        padding-right: 0;
     }
     pre {
         font-size: 0.75rem;
