--- a/pep_sphinx_extensions/pep_theme/static/style.css
+++ b/pep_sphinx_extensions/pep_theme/static/style.css
@@ -75,8 +75,10 @@ a,
 a:active,
 a:visited {
     color: var(--colour-links);
-    text-decoration-color: var(--colour-background-accent);
     display: inline;
+    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
+    text-decoration-color: var(--colour-background-accent);
 }
 a:hover,
 a:focus {
@@ -104,9 +106,12 @@ code {
     font-family: ui-monospace, "Cascadia Mono", "Segoe UI Mono", "DejaVu Sans Mono", Consolas, monospace;
     font-size: 0.875rem;
     white-space: pre-wrap;
-    word-wrap: break-word;
     -webkit-hyphens: none;
     hyphens: none;
+}
+code {
+    overflow-wrap: break-word;
+    overflow-wrap: anywhere;
 }
 code.literal {
     font-size: .8em;
